[package]
name = "rs-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-actix-web = "0.6"
num_cpus = "1"

[dev-dependencies]
rstest = "0.15"
